[package]
name = "hmtl-kernel"
version = "0.1.0"
edition = "2021"
description = "HMTL (Hardware-Mapped Tensor Language) Autonomous OS Kernel"

[lib]
name = "hmtl_kernel"
path = "src/lib.rs"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
half = "2"
libc = "0.2"
thiserror = "2"
num_cpus = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tensor_ops"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
